--- a/projects/porfolio/index.html
+++ b/projects/porfolio/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
 	 <title>Portfolio - Michele</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
 <link rel="manifest" href="images/favicon/site.webmanifest">
@@ -11,12 +11,16 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
  </head>
  <body>
    <header>
    	 <div class="logo-container">
    	 	 <a href="index.html">
-   		   <img src="images/logo lacerba.png" alt="logo"/>
+   		   <img src="images/nike.png" alt="logo"/>
    		   </a>
    	 </div>
    	 <nav>
@@ -29,7 +33,7 @@
    </header>
    <main id="main-content">
    	<div class="container">
-   		<section id="gallery">
+   		<section id="gallery" class="clearfix">
    			<div class="item">
    				<a href="https://lacerba.io/"target="_blank">
    					<div class="picture">
@@ -41,6 +45,36 @@
    				</a>
    			</div>
    				<div class="item">
+   				<a href="https://lacerba.io/"target="_blank">
+   					<div class="picture">
+   						<img src="images/montagne.jpg" alt="montagne">
+   					</div>
+   					<div class="caption">
+   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+   					</div>
+   				</a>
+   			</div>
+   			<div class="item">
+   				<a href="https://lacerba.io/"target="_blank">
+   					<div class="picture">
+   						<img src="images/montagne.jpg" alt="montagne">
+   					</div>
+   					<div class="caption">
+   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
+   					</div>
+   				</a>
+   			</div>
+   			<div class="item">
+   				<a href="https://lacerba.io/"target="_blank">
+   					<div class="picture">
+   						<img src="images/montagne.jpg" alt="montagne">
+   					</div>
+   					<div class="caption">
+   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+   					</div>
+   				</a>
+   			</div>
+   			<div class="item">
    				<a href="https://lacerba.io/"target="_blank">
    					<div class="picture">
    						<img src="images/montagne.jpg" alt="montagne">
