--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheets" type="text/css" href="styleshetts/normalize.css">
-<link rel="stylesheets" type="text/css" href="styleshetts/main.css">
+<link rel="stylesheet" type="text/css" href="styleshetts/normalize.css">
+<link rel="stylesheet" type="text/css" href="styleshetts/main.css">
  </head>
  <body>
    <header>
