--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
  <head>
-	 <title>Portfolio - Michele</title>
-		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <title>Portfolio - Michele</title>
+      <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
 <link rel="manifest" href="images/favicon/site.webmanifest">
@@ -13,90 +13,90 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+<link rel="stylesheet" type="text/css" href="styleshetts/normalize.css">
+<link rel="stylesheet" type="text/css" href="styleshetts/main.css">
  </head>
  <body>
    <header>
-   	 <div class="logo-container">
-   	 	 <a href="index.html">
-   		   <img src="images/nike.png" alt="logo"/>
-   		   </a>
-   	 </div>
-   	 <nav>
-   	 	<ul>
-   	 		<li><a href="index.html">Home</a></li>
-   	 		<li><a href="about.html">About</a></li>
-   	 		<li><a href="contact.html">Contatti</a></li>
-   	 	</ul>
-   	 </nav>
+       <div class="logo-container">
+          <a href="index.html">
+            <img src="images/nike.png" alt="logo"/>
+            </a>
+       </div>
+       <nav>
+         <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contatti</a></li>
+         </ul>
+       </nav>
    </header>
    <main id="main-content">
-   	<div class="container">
-   		<section id="gallery" class="clearfix">
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
-   				<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
-   					</div>
-   				</a>
-   			</div>
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
-   		</section>
-   	</div>
+      <div class="container">
+         <section id="gallery" class="clearfix">
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+               </a>
+            </div>
+               <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+               </a>
+            </div>
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
+                  </div>
+               </a>
+            </div>
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+               </a>
+            </div>
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+               </a>
+            </div>
+         </section>
+      </div>
    </main>
    <footer class="main">
-   	<div class="social">
-   		<a href="https://www.facebook.com/lacerba.io" target="_blank">
-   			<img src="images/black logo 2.png" alt="facebook" >
-   		</a>
-   		<a href="https://www.instagram.com/lacerba.io/" target="_blank">
-   			<img src="images/instagram 2.png" alt="instagram" >
-   		</a>
-   	</div>
-   	<p>copyright 2018</p>
+      <div class="social">
+         <a href="https://www.facebook.com/lacerba.io" target="_blank">
+            <img src="images/black logo 2.png" alt="facebook" >
+         </a>
+         <a href="https://www.instagram.com/lacerba.io/" target="_blank">
+            <img src="images/instagram 2.png" alt="instagram" >
+         </a>
+      </div>
+      <p>copyright 2018</p>
    </footer>
  </body>
  </html>
