--- a/about.html
+++ b/about.html
@@ -26,68 +26,26 @@
        <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html"class="active">About</a></li>
             <li><a href="contact.html">Contatti</a></li>
          </ul>
        </nav>
    </header>
    <main id="main-content">
       <div class="container">
-         <section id="gallery" class="clearfix">
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-               </a>
+         <section id="about">
+            <div class="profile-pic">
+               <img src="images/torta2.jpg" alt="torta">
             </div>
-               <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-               </a>
-            </div>
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
-                  </div>
-               </a>
-            </div>
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-               </a>
-            </div>
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-               </a>
+            <div class="description">
+               <h1>about</h1>
+               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
          </section>
       </div>
    </main>
-   <footer class="main">
+   <footer class="footer">
       <div class="social">
          <a href="https://www.facebook.com/lacerba.io" target="_blank">
             <img src="images/black logo 2.png" alt="facebook" >
