--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    	 </div>
    	 <nav>
    	 	<ul>
-   	 		<li><a href="index.html">Home</a></li>
+   	 		<li><a href="index.html" class="active">Home</a></li>
    	 		<li><a href="about.html">About</a></li>
    	 		<li><a href="contact.html">Contatti</a></li>
    	 	</ul>
@@ -87,7 +87,7 @@
    		</section>
    	</div>
    </main>
-   <footer class="main">
+   <footer class="footer">
    	<div class="social">
    		<a href="https://www.facebook.com/lacerba.io" target="_blank">
    			<img src="images/black logo 2.png" alt="facebook" >
