--- a/contact.html
+++ b/contact.html
@@ -26,23 +26,37 @@
        <nav>
          <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html"class="active">About</a></li>
-            <li><a href="contact.html">Contatti</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html"class="active">Contatti</a></li>
          </ul>
        </nav>
    </header>
    <main id="main-content">
       <div class="container">
-         <section id="about" class="clearfix">
-            <div class="profile-pic">
-               <img src="images/torta2.jpg" alt="torta">
-            </div>
-            <div class="description">
-               <h1 class="title">about</h1>
+        <section id="contact">
+          <div class="info">
+            <h1 class="title">info</h1>
                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-         </section>
+          </div>
+          <div class="contacts">
+            <h1 class="title">contatti</h1>
+            <ul>
+              <li>
+                <a href="tel:+393927703252">+393927703252</a>
+              </li>
+
+              <li>
+                <a href="mailto:michele.procacciante@gmil.com">michele.procacciante@gmil.com</a>
+              </li>
+
+              <li>
+                <a href="https://www.facebook.com/michele.procacciante/">michele procacciante</a>
+            </li>
+            </ul>
+          </div>
+        </section>
+         
       </div>
    </main>
    <footer class="footer">
