--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <header>
    	 <div class="logo-container">
    	 	 <a href="index.html">
-   		   <img src="images/nike.png" alt="logo"/>
+   		   <img src="images/1.png" alt="logo"/>
    		   </a>
    	 </div>
    	 <nav>
@@ -89,10 +89,10 @@
    </main>
    <footer class="footer">
    	<div class="social">
-   		<a href="https://www.facebook.com/lacerba.io" target="_blank">
+   		<a href="https://www.facebook.com/michele.procacciante/" target="_blank">
    			<img src="images/black logo 2.png" alt="facebook" >
    		</a>
-   		<a href="https://www.instagram.com/lacerba.io/" target="_blank">
+   		<a href="https://www.instagram.com/michi.rozzi/" target="_blank">
    			<img src="images/instagram 2.png" alt="instagram" >
    		</a>
    	</div>
