--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
    </header>
    <main id="main-content">
       <div class="container">
-        <section id="contact">
+        <section id="contact" class="clearfix">
           <div class="info">
             <h1 class="title">info</h1>
                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
