--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    			<div class="item">
    				<a href="https://lacerba.io/"target="_blank">
    					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
+   						<img src="images/torta3.jpg" alt="torta">
    					</div>
    					<div class="caption">
    						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -47,7 +47,7 @@
    				<div class="item">
    				<a href="https://lacerba.io/"target="_blank">
    					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
+   						<img src="images/torta4.jpg" alt="torta">
    					</div>
    					<div class="caption">
    						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
