--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styleshetts/normalize.css">
 <link rel="stylesheet" type="text/css" href="styleshetts/main.css">
  </head>
@@ -43,15 +45,15 @@
             <h1 class="title">contatti</h1>
             <ul>
               <li>
-                <a href="tel:+393927703252">+393927703252</a>
+                <span class="material-icons">smartphone</span><a href="tel:+393927703252">+393927703252</a>
               </li>
 
               <li>
-                <a href="mailto:michele.procacciante@gmil.com">michele.procacciante@gmil.com</a>
+                <span class="material-icons">email</span><a href="mailto:michele.procacciante@gmil.com">michele.procacciante@gmil.com</a>
               </li>
 
               <li>
-                <a href="https://www.facebook.com/michele.procacciante/">michele procacciante</a>
+                <span class="material-icons">facebook</span><a href="https://www.facebook.com/michele.procacciante/">michele procacciante</a>
             </li>
             </ul>
           </div>
