--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styleshetts/normalize.css">
 <link rel="stylesheet" type="text/css" href="styleshetts/main.css">
+<meta name="viewport"  content="width=device-width, initial-scale=1.0">
  </head>
  <body>
    <header>
