--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styleshetts/normalize.css">
 <link rel="stylesheet" type="text/css" href="styleshetts/main.css">
+<meta name="viewport"  content="width=device-width, initial-scale=1.0">
  </head>
  <body>
    <header>
