--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
    					</div>
    					<div class="caption">
    						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+   						<img src="images/icon.png" alt="icon">
    					</div>
    				</a>
    			</div>
