--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styleshetts/normalize.css">
 <link rel="stylesheet" type="text/css" href="styleshetts/main.css">
 <meta name="viewport"  content="width=device-width, initial-scale=1.0">
@@ -27,68 +28,115 @@
    	 <nav>
    	 	<ul>
    	 		<li><a href="index.html" class="active">Home</a></li>
-   	 		<li><a href="about.html">About</a></li>
-   	 		<li><a href="contact.html">Contatti</a></li>
+   	 		<li><a href="#about">About</a></li>
+   	 		<li><a href="#contact">Contatti</a></li>
    	 	</ul>
    	 </nav>
-   </header>
+   </header >
    <main id="main-content">
-   	<div class="container">
-   		<section id="gallery" class="clearfix">
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/torta3.jpg" alt="torta">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
-   				<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/torta4.jpg" alt="torta">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   						<img src="images/icon.png" alt="icon">
-   					</div>
-   				</a>
-   			</div>
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   						
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
-   					</div>
-   				</a>
-   			</div>
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
-   			<div class="item">
-   				<a href="https://lacerba.io/"target="_blank">
-   					<div class="picture">
-   						<img src="images/montagne.jpg" alt="montagne">
-   					</div>
-   					<div class="caption">
-   						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-   					</div>
-   				</a>
-   			</div>
+   	<section id="hero">
+     <div class="container">
+     <div class="hero-caption"> 
+      <h1>Welcome to our studio!</h1>
+       <h2>Check out our works</h2> 
+       <a href="#gallery" class="btn">Have a look</a>
+        </div>
+         </div> 
+       </section>
+   		<section id="gallery" >
+            <div class="container">
+               <div class="gallery">
+                 <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/torta3.jpg" alt="torta">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+               </a>
+            </div>
+               <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/torta4.jpg" alt="torta">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                     <img src="images/icon.png" alt="icon">
+                  </div>
+               </a>
+            </div>
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                     
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
+                  </div>
+               </a>
+            </div>
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+               </a>
+            </div>
+            <div class="item">
+               <a href="https://lacerba.io/"target="_blank">
+                  <div class="picture">
+                     <img src="images/montagne.jpg" alt="montagne">
+                  </div>
+                  <div class="caption">
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </div>
+
+               </a>
+                 </div> 
+               </div>
+            </div>
    		</section>
-   	</div>
+         <section id="about" class="clearfix">
+            <div class="container"></div>
+            <div class="profile-pic">
+               <img src="images/torta2.jpg" alt="torta">
+            </div>
+            <div class="description">
+               <h1 class="title">about</h1>
+               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+         </section>
+          <section id="contact" class="clearfix">
+          <div class="info">
+            <h1 class="title">info</h1>
+               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="contacts">
+            <div class="container"></div>
+            <h1 class="title">contatti</h1>
+            <ul>
+              <li>
+                <span class="material-icons">smartphone</span><a href="tel:+393927703252">+393927703252</a>
+              </li>
+
+              <li>
+                <span class="material-icons">email</span><a href="mailto:michele.procacciante@gmil.com">michele.procacciante@gmil.com</a>
+              </li>
+
+              <li>
+                <span class="material-icons">facebook</span><a href="https://www.facebook.com/michele.procacciante/">michele procacciante</a>
+            </li>
+            </ul>
+          </div>
+        </section>
    </main>
    <footer class="footer">
    	<div class="social">
