--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="item">
                <a href="https://lacerba.io/"target="_blank">
                   <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
+                     <img src="images/torta5.jfif" alt="torta">
                      
                   </div>
                   <div class="caption">
@@ -81,7 +81,7 @@
             <div class="item">
                <a href="https://lacerba.io/"target="_blank">
                   <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
+                     <img src="images/torta6.jpg" alt="torta">
                   </div>
                   <div class="caption">
                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -91,7 +91,7 @@
             <div class="item">
                <a href="https://lacerba.io/"target="_blank">
                   <div class="picture">
-                     <img src="images/montagne.jpg" alt="montagne">
+                     <img src="images/torta7.jfif" alt="torta">
                   </div>
                   <div class="caption">
                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
