--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               </li>
 
               <li>
-                <span class="material-icons">email</span><a href="mailto:michele.procacciante@gmail.com">michele.procacciante@gmil.com</a>
+                <span class="material-icons">email</span><a href="mailto:michele.procacciante@gmail.com">michele.procacciante@gmail.com</a>
               </li>
 
               <li>
