--- a/iscriviti e scegli il corso.html
+++ b/iscriviti e scegli il corso.html
@@ -33,7 +33,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contatti</a></li>
-        <li><a href="iscriviti e scegli il corso">iscriviti e scegli il corso</a></li>
+        <li><a href="iscriviti e scegli il corso.html">iscriviti e scegli il corso</a></li>
       </ul>
      </nav>
       </div>
@@ -49,65 +49,7 @@
         </div>
          </div> 
        </section>
-   		<section id="gallery" >
-            <div class="container">
-               <div class="gallery">
-                 <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/torta3.jpg" alt="torta">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-               </a>
-            </div>
-               <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/torta4.jpg" alt="torta">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                     <img src="images/icon.png" alt="icon">
-                  </div>
-               </a>
-            </div>
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/torta5.jfif" alt="torta">
-                     
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit orem ipsum dolor sit amet</p>
-                  </div>
-               </a>
-            </div>
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/torta6.jpg" alt="torta">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-               </a>
-            </div>
-            <div class="item">
-               <a href="https://lacerba.io/"target="_blank">
-                  <div class="picture">
-                     <img src="images/torta7.jfif" alt="torta">
-                  </div>
-                  <div class="caption">
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </div>
-
-               </a>
-                 </div> 
-               </div>
-            </div>
-   		</section>
+   		  
          <section id="about" class="clearfix">
             <div class="container"></div>
             <div class="profile-pic">
