--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contatti</a></li>
-        <li><a href="iscriviti e scegli il corso">iscriviti e scegli il corso</a></li>
+        <li><a href="iscriviti e scegli il corso.html">iscriviti e scegli il corso</a></li>
       </ul>
      </nav>
       </div>
@@ -118,6 +118,15 @@
                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
+         </section>
+         <section id="video">
+          <div class="container">
+            <video  controls>
+              <source src="images/sharingan-final.mp4" type="video/mp4">
+  <source src="images/sharingan-final.webm" type="video/webm">
+            </video>
+          </div>
+           
          </section>
           <section id="contact" class="clearfix">
           <div class="info">
