Update iscriviti e scegli il corso.html

--- a/iscriviti e scegli il corso.html
+++ b/iscriviti e scegli il corso.html
@@ -20,6 +20,7 @@
     
  </head>
  <body>
+	 <div class="container">
    <header>
     <div class="container">
       <div class="header">
@@ -83,8 +84,10 @@
         <button type="submit" >iscriviti</button>
 
       </form>
+	
          
    </main>
+<div>
    <footer class="footer">
    	<div class="social">
    		<a href="https://www.facebook.com/michele.procacciante/" target="_blank">
