--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h1 class="title">contatti</h1>
             <ul>
               <li>
-                <span class="material-icons">smartphone</span><a href="tel:+393927703252">+393927703252</a>
+                <span class="material-icons">smartphone</span><a href="tel:+393757379424">+393757379424</a>
               </li>
 
               <li>
@@ -158,7 +158,7 @@
    		<a href="https://www.facebook.com/michele.procacciante/" target="_blank">
    			<img src="images/black logo 2.png" alt="facebook" >
    		</a>
-   		<a href="https://www.instagram.com/michi.rozzi/" target="_blank">
+   		<a href="https://www.instagram.com/michele_proka/" target="_blank">
    			<img src="images/instagram 2.png" alt="instagram" >
    		</a>
    	</div>
