Update iscriviti e scegli il corso.html

--- a/iscriviti e scegli il corso.html
+++ b/iscriviti e scegli il corso.html
@@ -41,7 +41,7 @@
     </div> 
    </header >
   
-       </section class="lol">
+	 <section class="lol">
    		  <h1>iscriviti a D.M</h1>
         <label for="name">nome:</label>
         <input type="text" id="name" name="user_name"> 
